# OpenGLTemplate

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  readme.md
App/: CMakeLists.txt  main.cpp
Core/: CMakeLists.txt
Core/include/Core/: Application.h  EntryPoint.h  Layer.h
Core/src/: Application.cpp
scripts/: build.bat  generate-debug.bat  generate-release.bat  run.bat
